--- a/src/styles/components/sections/header.scss
+++ b/src/styles/components/sections/header.scss
@@ -1,9 +1,10 @@
 .header {
   padding: 9px 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 10;
 
   @include onTablet {
     padding: 15px 0;
