--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -8,5 +8,10 @@
 @import "components/nav";
 @import "components/btn";
 @import "components/page";
+@import "components/title";
+@import "components/event";
+@import "components/slider";
 @import "components/sections/header";
 @import "components/sections/hero";
+@import "components/sections/events";
+@import "components/sections/gallery";
