--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,8 @@
 $tablet-min-width: 768px;
 $desktop-min-width: 1260px;
-
 $color-light: #fff;
 $color-dark: #0F0E08;
+$color-text-dark: #4E4E4E;
 $color-accent: #1A5A4C;
+$color-special: #F14A27;
 
