--- a/src/styles/components/page.scss
+++ b/src/styles/components/page.scss
@@ -20,18 +20,14 @@
     left: 0;
     right: 0;
     opacity: 0;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
     pointer-events: none;
     transition: opacity 0.5s, transform 0.5s;
   }
 
   &__menu:target {
     opacity: 1;
-    transform: translateX(0);
+    transform: translateY(0);
     pointer-events: all;
-  }
-
-  &:has(.page__menu:target) {
-    overflow: hidden;
   }
 }
