create new slider

--- a/src/styles/components/event.scss
+++ b/src/styles/components/event.scss
@@ -96,17 +96,18 @@
     }
 
     .event__content {
-      background-color: $color-light;
+      box-sizing: border-box;
       margin-top: -57px;
       padding: 20px;
+      max-width: 280px;
+      justify-self: center;
+      background-color: $color-light;
       box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
 
       @include onTablet {
-        box-sizing: border-box;
         grid-column: 1 / -1;
         max-width: 570px;
         width: 100%;
-        justify-self: center;
         padding: 45px 55px 50px;
         margin-top: -84px;
       }
