--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -1,14 +1,18 @@
 .slider {
   overflow: hidden;
-  width: 100%;
+  margin: 0 auto;
+
+  // @include onTablet {
+  //   min-width: 700px;
+  //   max-width: 800px;
+  // }
 
   &__list {
     list-style: none;
     padding: 0;
     margin: 0 0 20px;
     display: flex;
-
-    // justify-content: center;
+    justify-content: space-between;
     gap: 16px;
     transition: transform 0.5s;
 
@@ -17,16 +21,19 @@
     }
   }
 
-  &__item {
-    width: 300px;
-    height: 410px;
+  &__img {
+    display: block;
   }
 
-  // &__img {
-  // }
-
   &__img img {
-    height: 100%;
+    width: 280px;
+    height: 410px;
+    object-fit: cover;
+
+    @include onTablet {
+      width: 340px;
+      height: 543px;
+    }
   }
 
   &__buttons {
