--- a/src/styles/components/sections/events.scss
+++ b/src/styles/components/sections/events.scss
@@ -1,6 +1,10 @@
 .events {
   padding: 70px 0 50px;
 
+  @include onDesktop {
+    padding: 200px 0 100px;
+  }
+
   &__title {
     max-width: 270px;
 
