implement header and burger-menu

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,90 @@
-h1 {
-  @extend %h1;
+@mixin heading-1 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 86px;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 65px;
+  }
+
+  @include on-phone {
+    font-size: 45px;
+    line-height: 45px;
+  }
+}
+
+@mixin heading-2 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+
+  @include on-phone {
+    font-size: 36px;
+    line-height: 36px;
+    text-align: center;
+  }
+}
+
+@mixin heading-3 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+@mixin nav-link {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 22px;
+
+  @include on-tablet {
+    font-size: 16px;
+    line-height: 16px;
+  }
+}
+
+@mixin text-category {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+}
+
+@mixin text-m {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+@mixin text-s {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+@mixin text-bold {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+@mixin date {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+}
+
+@mixin note {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
 }
