--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,41 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/icon';
+@import 'blocks/box';
+@import 'blocks/action-button';
+@import 'blocks/events';
+@import 'blocks/logo';
+@import 'blocks/main';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/schedule';
+@import 'blocks/section';
 
-body {
-  background: $c-gray;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button {
+  border: none;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
