--- a/src/styles/components/icon.scss
+++ b/src/styles/components/icon.scss
@@ -6,9 +6,9 @@
   background-position: center;
   background-size: cover;
 
-  // @include onDesktop {
-  //   @include basic-interactive-styles;
-  // }
+  @include onDesktop {
+    @include basic-interactive-styles;
+  }
 
   &--burger {
     background-image: url(../images/icons/icon-burger.svg);
@@ -21,8 +21,16 @@
   &--close {
     background-image: url(../images/icons/icon-close.svg);
 
-    // @include onDesktop {
-    //   @include basic-interactive-styles($color-light);
-    // }
+    @include onDesktop {
+      @include basic-interactive-styles($color-light);
+    }
+  }
+
+  &--facebook {
+    background-image: url(../images/icons/icon-facebook.svg);
+  }
+
+    &--instagram {
+    background-image: url(../images/icons/icon-instagram.svg);
   }
 }
