--- a/src/styles/components/logo.scss
+++ b/src/styles/components/logo.scss
@@ -1,7 +1,7 @@
 .logo {
   display: flex;
 
-  // @include onDesktop {
-  //   @include basic-interactive-styles;
-  // }
+  @include onDesktop {
+    @include basic-interactive-styles;
+  }
 }
