--- a/src/styles/components/sections/hero.scss
+++ b/src/styles/components/sections/hero.scss
@@ -50,6 +50,8 @@
 
     @include onDesktop {
       @include page-grid;
+
+      gap: 89px;
     }
   }
 
@@ -104,6 +106,7 @@
       padding-left: 90px;
       transform-origin: left bottom;
       transform: rotate(-90deg) translateY(100%);
+      transition: padding-left 0.5s;
 
       &::before {
         content: "";
@@ -112,6 +115,15 @@
         width: 70px;
         height: 1px;
         background-color: $color-accent;
+        transition: width 0.5s;
+      }
+
+      &:hover {
+      padding-left: 110px;
+
+        &::before {
+          width: 90px;
+        }
       }
     }
   }
