--- a/src/styles/components/slider.scss
+++ b/src/styles/components/slider.scss
@@ -27,6 +27,7 @@
   &__item {
     @include onDesktop {
       grid-column: span 4;
+      transition: transform 0.5s;
 
       &--big {
         grid-column: span 8;
@@ -38,6 +39,10 @@
         .slider__img {
           height: 360px;
         }
+      }
+
+      &:hover {
+        transform: scale(1.05);
       }
     }
   }
