--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -6,12 +6,18 @@
 @import "components/logo";
 @import "components/menu";
 @import "components/nav";
+@import "components/timetable";
 @import "components/btn";
 @import "components/page";
 @import "components/title";
 @import "components/event";
 @import "components/slider";
+@import "components/form";
+@import "components/socials";
+@import "components/contacts";
 @import "components/sections/header";
 @import "components/sections/hero";
 @import "components/sections/events";
 @import "components/sections/gallery";
+@import "components/sections/subscription";
+@import "components/sections/footer";
