--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -10,6 +10,44 @@
   }
 }
 
+@mixin hover-line($bg-color: $color-light) {
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: -8px;
+    border-radius: 50%;
+    width: 100%;
+    height: 1px;
+    background-color: $bg-color;
+
+    transform: scale(0);
+    transform-origin: left;
+    transition: transform 0.5s;
+  }
+
+  &:hover::before {
+    transform: scale(1);
+  }
+}
+
+@mixin basic-interactive-styles($focusColor: $color-dark) {
+  border-radius: 10px;
+  padding: 2px;
+  transition: transform 0.5s,
+              box-shadow 0.5s;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+
+  &:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px $focusColor;
+  }
+}
+
 @mixin page-grid {
   --columns: 2;
 
@@ -27,18 +65,3 @@
     --columns: 12;
   }
 }
-
-// @mixin basic-interactive-styles($focusColor: $color-accent) {
-//   border-radius: 10px;
-//   transition: transform 0.5s,
-//               box-shadow 0.5s;
-
-//   &:hover {
-//     transform: scale(1.2);
-//   }
-
-//   &:focus {
-//     outline: transparent;
-//     box-shadow: 0 0 0 2px $focusColor;
-//   }
-// }
