add events section

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -20,6 +20,7 @@
   font-weight: 700;
   font-size: 48px;
   line-height: 48px;
+  color: $heading-color;
 
   @include on-phone {
     font-size: 36px;
@@ -33,6 +34,12 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 36px;
+  color: $heading-color;
+
+  @include on-phone {
+    font-size: 28px;
+    line-height: 28px;
+  }
 }
 
 @mixin nav-link {
@@ -47,16 +54,21 @@
   }
 }
 
-@mixin text-category {
+@mixin text-label {
   font-family: 'IBM Plex Sans', sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 14px;
+
+  @include on-phone {
+    font-size: 16px;
+    line-height: 16px;
+  }
 }
 
 @mixin text-m {
   font-family: 'IBM Plex Sans', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 16px;
   line-height: 24px;
 }
@@ -80,6 +92,11 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
+
+  @include on-phone {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 @mixin note {
