--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,7 +1,13 @@
 .main {
-  @include content-limitation;
-
   &__section {
     margin-block: 200px;
+
+    @include on-tablet {
+      margin-block: 88px;
+    }
+
+    @include on-phone {
+      margin-block: 70px;
+    }
   }
 }
