--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,25 +1,76 @@
 .events {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  width: fit-content;
-  color: $tip-color;
-
-  &:hover {
-    @include hover(color, $text-dark-color);
+  &__container {
+    @include content-limitation;
   }
 
-  &__decor {
-    background-color: $primary-decor-color;
-    width: 70px;
-    height: 1px;
+  &__content {
+    display: flex;
+    flex-direction: column;
+
+    @include on-tablet {
+      gap: 64px;
+    }
+
+    @include on-phone {
+      gap: 60px;
+    }
   }
 
-  &__text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 14px;
-    text-transform: uppercase;
+  &__exhibition {
+    align-items: center;
+    margin-bottom: 120px;
+
+    @include page-grid;
+
+    @include on-tablet {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+
+      margin-bottom: 64px;
+    }
+
+    &:nth-child(n + 2) {
+      @include on-tablet {
+        margin-bottom: 112px;
+
+        @include on-phone {
+          margin-bottom: 60px;
+        }
+      }
+    }
+
+    @include on-phone {
+      gap: 20px;
+
+      margin-bottom: 60px;
+    }
+  }
+
+  &__title {
+    @include heading-2;
+
+    margin-bottom: 56px;
+
+    @include on-tablet {
+      margin-bottom: 48px;
+    }
+
+    @include on-phone {
+      margin-bottom: 40px;
+    }
+  }
+
+  &__space {
+    width: 100%;
+    margin-bottom: 200px;
+
+    @include on-tablet {
+      margin-bottom: 88px;
+    }
+
+    @include on-phone {
+      margin-bottom: 100px;
+    }
   }
 }
