--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,14 +1,6 @@
 .header {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 30px;
-
+  @include page-grid;
   @include content-limitation;
-
-  @include on-tablet {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 20px;
-  }
 
   @include on-phone {
     display: flex;
@@ -32,9 +24,10 @@
     @include on-phone {
       width: 100%;
       align-items: center;
+
+      margin: 0;
       padding-inline: $content-padding--s;
       box-sizing: border-box;
-      margin: 0;
     }
   }
 
@@ -49,8 +42,8 @@
       position: absolute;
       z-index: 1;
       top: $top-gap-phone;
-      margin: 0;
       left: $content-padding--s;
+      margin: 0;
     }
   }
 
@@ -58,7 +51,6 @@
     @include heading-1;
 
     text-transform: uppercase;
-
     margin-bottom: 89px;
 
     @include on-tablet {
@@ -90,7 +82,7 @@
   &__events {
     width: fit-content;
     transform: rotateZ(-90deg);
-    transform-origin: 2% 42%;
+    transform-origin: 6% 42%;
     cursor: pointer;
 
     &:hover {
@@ -120,6 +112,7 @@
     margin-top: 15px;
     width: 170px;
     height: 72px;
+
     display: flex;
     justify-content: center;
 
