--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,9 +1,8 @@
 .menu {
   background-color: $primary-decor-color;
   color: $text-light-color;
-  position: relative;
 
-  &__container {
+  &__content {
     display: flex;
 
     padding-top: $top-gap-tablet;
@@ -12,41 +11,60 @@
     @include content-limitation;
 
     @include on-tablet {
+      justify-content: space-between;
+
       padding-block: $top-gap-tablet;
     }
-
-    @include on-phone {
-      padding-block: 27px;
-    }
-  }
-
-  &__content {
-    flex-grow: 1;
-    display: flex;
-    justify-content: space-evenly;
 
     @include on-phone {
       flex-direction: column;
       align-items: center;
       gap: 24px;
+
+      padding-block: 27px;
+    }
+
+    & > * {
+      margin-right: auto;
+
+      @include on-tablet {
+        margin-right: 0;
+      }
+    }
+  }
+
+  &__nav {
+    display: flex;
+    gap: 28px;
+
+    @include on-phone {
+      width: 100%;
+    }
+  }
+
+  &__nav-list {
+    @include on-phone {
+      margin-inline: auto;
     }
   }
 
   &__icon {
-    @include on-phone {
-      top: $top-gap-phone;
-      left: 20px;
-      position: absolute;
+    &--outside {
+      @include on-phone {
+        display: none;
+      }
+    }
+
+    &--inside {
+      display: none;
+
+      @include on-phone {
+        display: flex;
+      }
     }
   }
 
   &__d-line {
     background-color: $text-light-color;
-  }
-
-  &__nav {
-    @include on-phone {
-      // align-self: flex-end;
-    }
   }
 }
