--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -16,3 +16,4 @@ $content-padding--m: 34px;
 $content-padding--l: 55px;
 $top-gap-tablet: 40px;
 $top-gap-phone: 27px;
+$shadow: 0 2px 0 0 rgba($primary-decor-color, 0.25);
