--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,22 @@
-@import 'utils/vars';
-@import 'utils/mixins';
-@import 'utils/extends';
+.container {
+  @include content-padding-inline;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  width: 1px !important;
+  height: 1px !important;
+  margin: -1px !important;
+  border: 0 !important;
+  padding: 0 !important;
+  white-space: nowrap !important;
+  clip-path: inset(100%) !important;
+  clip: rect(0 0 0 0) !important;
+  overflow: hidden !important;
+}
+
+.hidden-desktop {
+  @include tablet-above {
+    display: none !important;
+  }
+}
