--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -111,6 +111,10 @@
       padding: 0;
       text-decoration: none;
       color: inherit;
+
+      &:hover {
+        color: $dark-grey-color;
+      }
     }
   }
 
