--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -19,12 +19,8 @@
     background: $red-accent url(./../images/icons/arrow_right-black.svg) center
       no-repeat;
 
-    &:hover,
-    &:focus {
-      background: $dark-grey-color
-        url(./../images/icons/keyboard_arrow_right.svg) center no-repeat;
-      color: $dots-color;
-      border: none;
+    &:hover {
+      background-color: hsl(0deg, 100%, 70%);
     }
   }
 }
