--- a/src/styles/blocks/_sign-up.scss
+++ b/src/styles/blocks/_sign-up.scss
@@ -57,20 +57,11 @@
     }
   }
 
-  &__button {
+  &__form {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    z-index: 10;
-
-    @include on-mobile {
-      width: 100%;
-    }
-  }
-
-  &__form {
-    display: inline-flex;
   }
 
   &__input {
@@ -97,10 +88,17 @@
       width: 230px;
     }
 
-    &:hover,
-    &:focus {
+    &:hover {
       background-color: $light-grey-color;
-      color: $dark-grey-color;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: inset 0 0 7px $fonts-main-color;
+    }
+
+    &:-webkit-autofill {
+      -webkit-text-fill-color: $black-color;
     }
 
     @include on-mobile {
