--- a/src/styles/blocks/_button.scss
+++ b/src/styles/blocks/_button.scss
@@ -1,6 +1,7 @@
 .button {
   height: 70px;
   aspect-ratio: 1;
+  border: none;
   background: $dark-grey-color url(./../images/icons/keyboard_arrow_right.svg)
     center no-repeat;
   background-size: 24px 24px;
