--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -3,7 +3,7 @@
   z-index: 111;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: scroll;
   color: $white-color;
 
   @include linear-gradient(233);
