museum was created

--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,56 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-tablet {
+  @media(min-width: 576px) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media(min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin page-grid {
+  --columns: 2;
+
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+  column-gap: 20px;
+
+  @include on-tablet {
+    --columns: 6;
+
+    column-gap: 20px;
+  }
+
+  @include on-desktop {
+    --columns: 12;
+
+    column-gap: 30px;
+  }
+}
+
+@mixin local-grid {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@mixin footer-grid {
+  display: grid;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: 4;
+    
+    column-gap: 20px;
+  }
+
+  @include on-desktop {
+    column-gap: 30px;
+  }
+}
