--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
 $c-gray: #eee;
+$monserrat-font: "Montserrat", sans-serif;
+$ibm-plex-font: "IBM Plex Sans", sans-serif;
+$section-title-color: #0F0E08;
+$scroll-width: 14px;
