another solution was added

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -19,11 +19,11 @@
     }
 
     &--first {
-      background-image: url(../images/_1_events.jpg);
+      background-image: url(../images/events-first.jpg);
     }
 
     &--second {
-      background-image: url(../images/_2_events.jpg);
+      background-image: url(../images/events-second.jpg);
     }
   }
 
