another solution was added twice

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -19,11 +19,11 @@
     }
 
     &--first {
-      background-image: url(../images/events-first.jpg);
+      background-image: url(../images/events-first.png);
     }
 
     &--second {
-      background-image: url(../images/events-second.jpg);
+      background-image: url(../images/events-second.png);
     }
   }
 
