add gallery section and footer

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -6,19 +6,15 @@
   &__content {
     display: flex;
     flex-direction: column;
+  }
 
-    @include on-tablet {
-      gap: 64px;
-    }
-
-    @include on-phone {
-      gap: 60px;
-    }
+  &__title {
+    color: $heading-color;
   }
 
   &__exhibition {
     align-items: center;
-    margin-bottom: 120px;
+    margin-bottom: 104px;
 
     @include page-grid;
 
@@ -44,20 +40,6 @@
       gap: 20px;
 
       margin-bottom: 60px;
-    }
-  }
-
-  &__title {
-    @include heading-2;
-
-    margin-bottom: 56px;
-
-    @include on-tablet {
-      margin-bottom: 48px;
-    }
-
-    @include on-phone {
-      margin-bottom: 40px;
     }
   }
 
