--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,8 +5,17 @@
 
   @include hover(transform, scale(1.2));
 
+  &--left {
+    justify-content: left;
+  }
+
   &__img {
     width: 55px;
     height: 61px;
+
+    &--big {
+      width: 62px;
+      height: 72px;
+    }
   }
 }
