--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -10,4 +10,16 @@
       margin-block: 70px;
     }
   }
+
+  &__section-title {
+    margin-bottom: 56px;
+
+    @include on-tablet {
+      margin-bottom: 48px;
+    }
+
+    @include on-phone {
+      margin-bottom: 40px;
+    }
+  }
 }
