--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,11 +11,15 @@
 @import 'blocks/main';
 @import 'blocks/menu';
 @import 'blocks/nav';
-@import 'blocks/schedule';
+@import 'blocks/table';
 @import 'blocks/events';
 @import 'blocks/lecture';
 @import 'blocks/exhibition';
 @import 'blocks/gallery';
+@import 'blocks/gallery-grid';
+@import 'blocks/image-slider';
+@import 'blocks/footer';
+@import 'blocks/hero';
 
 a {
   color: inherit;
@@ -25,6 +29,11 @@ a {
 button {
   border: none;
   padding: 0;
+}
+
+input {
+  border: none;
+  outline: none;
 }
 
 h1,
