--- a/src/styles/utils/_decor.scss
+++ b/src/styles/utils/_decor.scss
@@ -7,6 +7,13 @@
   height: auto;
   background-color: $text-dark-color;
 
+  &--horizontal {
+    @include on-tablet {
+      height: 1px;
+      width: 100%;
+    }
+  }
+
   @include on-phone {
     height: 1px;
     width: 100%;
@@ -15,4 +22,8 @@
 
 .no-scroll {
   overflow: hidden;
+}
+
+.no-wrap {
+  text-wrap: nowrap;
 }
