--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,7 +8,7 @@ $tip-color: #687480;
 $primary-decor-color: #1a5a4c;
 $secondary-decor-color: #f14a27;
 $max-content-width: 1170px;
-$tablet-max-width: 1248px;
+$tablet-max-width: 1279px;
 $phone-max-width: 767px;
 $hover-duration: 0.3s;
 $content-padding--s: 20px;
@@ -17,3 +17,5 @@ $content-padding--l: 55px;
 $top-gap-tablet: 40px;
 $top-gap-phone: 27px;
 $shadow: 0 2px 0 0 rgba($primary-decor-color, 0.25);
+$dot: #0e0e0e;
+$dot--active: #1a5a4c;
