--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -15,18 +15,25 @@
   }
 }
 
+h1 {
+  @include heading-1;
+}
+
 @mixin heading-2 {
   font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 48px;
   line-height: 48px;
-  color: $heading-color;
 
   @include on-phone {
     font-size: 36px;
     line-height: 36px;
     text-align: center;
   }
+}
+
+h2 {
+  @include heading-2;
 }
 
 @mixin heading-3 {
@@ -40,6 +47,10 @@
     font-size: 28px;
     line-height: 28px;
   }
+}
+
+h3 {
+  @include heading-3;
 }
 
 @mixin nav-link {
@@ -104,4 +115,11 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
+}
+
+@mixin copyright {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 17px;
 }
