--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,13 +4,18 @@
   scroll-behavior: smooth;
   min-width: 320px;
   position: relative;
+  overflow-x: hidden;
+
+  &:has(&__menu.is-active) {
+    overflow: hidden;
+  }
 
   &:has(.is-active)::after {
     top: 0;
     z-index: 0;
     position: absolute;
     content: '';
-    height: 100%;
+    height: 110vh;
     width: 100%;
     background-color: $bg-dark-color;
     opacity: 0.5;
@@ -19,6 +24,7 @@
   &__body {
     background: $bg-light-color;
     color: $text-dark-color;
+    min-width: 320px;
   }
 
   &__menu {
@@ -30,10 +36,14 @@
     top: 0;
     z-index: 2;
 
-    display: none;
+    opacity: 0;
+    transform: translateY(-100%);
+
+    @include transition(all);
 
     &.is-active {
-      display: block;
+      opacity: 1;
+      transform: translateY(0);
     }
   }
 }
