--- a/src/styles/blocks/gallery-grid.scss
+++ b/src/styles/blocks/gallery-grid.scss
@@ -5,6 +5,9 @@
 
   &__cell {
     display: flex;
+    cursor: pointer;
+
+    @include hover(transform, scale(1.02));
 
     &--narrow {
       grid-column: span 4;
