--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -31,10 +31,15 @@
     position: absolute;
     bottom: 0;
     transform: translateY(50%);
+    cursor: pointer;
+
+    @include hover(transform, translateY(50%) scale(1.05));
 
     @include on-tablet {
       padding-inline: 55px;
       transform: translateY(60%);
+
+      @include hover(transform, translateY(60%) scale(1.05));
     }
 
     @include on-phone {
