--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -46,4 +46,33 @@
       transform: translateY(0);
     }
   }
+
+  &__to-top {
+    display: none;
+    border: 1px solid $primary-decor-color;
+    background-image: url('../assets/icons/carbon_arrow-up.svg');
+    background-color: $bg-light-color;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-sizing: border-box;
+    z-index: 20;
+
+    position: fixed;
+    right: $content-padding--s;
+    bottom: 100px;
+
+    &:hover {
+      background-image: url('../assets/icons/carbon_arrow-up-light.svg');
+    }
+
+    @include hover(background-color, $primary-decor-color);
+
+    @include on-phone {
+      display: block;
+    }
+  }
 }
