--- a/src/styles/blocks/scroll-to-section.scss
+++ b/src/styles/blocks/scroll-to-section.scss
@@ -6,7 +6,7 @@
   width: fit-content;
   color: $tip-color;
 
-  @include hover(color, $text-dark-color);
+  @include hover(color, $secondary-decor-color);
 
   &__decor {
     background-color: $primary-decor-color;
