--- a/src/styles/blocks/action-button.scss
+++ b/src/styles/blocks/action-button.scss
@@ -14,7 +14,7 @@
     content: '';
     width: 100%;
     height: 100%;
-    background-color: $bg-dark-color;
+    background-color: $primary-decor-color;
     opacity: 0.2;
     transform: translateX(-101%);
     transition: transform $hover-duration;
