--- a/src/styles/blocks/exhibition.scss
+++ b/src/styles/blocks/exhibition.scss
@@ -20,18 +20,17 @@
     position: relative;
 
     &::after {
-      opacity: 0;
-      content: '';
-      display: block;
+      content: "";
+      display: none;
       position: absolute;
       height: 110%;
-      width: 110%;
-      background-color: rgba($primary-decor-color, 0.1);
+      width: 110%;;
+      background-color: rgba($primary-decor-color, 0.2);
       top: -5%;
       left: -5%;
     }
 
-    @include hover-after(opacity, 1);
+    @include hover-after(display, block);
 
     @include on-tablet {
       @include page-grid;
