--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -7,7 +7,7 @@
   overflow-x: hidden;
 
   &:has(&__menu.is-active) {
-    overflow: hidden;
+    overflow-y: hidden;
   }
 
   &:has(.is-active)::after {
