add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -11,12 +11,21 @@
   transform: translateX(-100%);
   pointer-events: none;
 
+  @include onTablet {
+    height: 40vh;
+  }
+
   &:target {
   opacity: 1;
   pointer-events: all;
   transform: translateX(0);
   }
 
+  &-container-for-grid {
+    @include onTablet {
+      @include pageGrid;
+    }
+  }
 
   &-top-bar {
     padding-top: 27px;
@@ -24,7 +33,32 @@
     border-bottom: solid 1px #FFFFFF80;
     display: flex;
     flex-direction: row;
-    gap: 38px;
+    gap: 28px;
+
+    @include onTablet {
+      grid-column: 1 / 4;
+      border-bottom: none;
+
+      // border-right: solid 1px #FFFFFF80;
+      padding-top: 39px;
+      position: relative;
+      gap: 38px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 40px;
+        bottom: 40px;
+        right: 0;
+        width: 1px;
+        background-color: #FFFFFF80;
+      }
+    }
+
+    @include onDesktop {
+      grid-column: 1 / 8;
+      gap: 102px;
+    }
 
 
     &-link{
@@ -44,6 +78,14 @@
       flex-direction: row;
       gap: 28px;
 
+      @include onTablet {
+        gap: 20px;
+      }
+
+      @include onDesktop {
+        gap: 80px;
+      }
+
       &-left {
         // grid-column: 1 / 2;
       }
@@ -62,12 +104,16 @@
       }
 
       &-link {
-        font-family: IBM Plex Sans;
+        font-family: "IBM Plex Sans", sans-serif;
         font-size: 16px;
         font-weight: 500;
         text-align: left;
-        color: #FFFFFF;
+        color: #FFF;
         text-decoration: none;
+
+        @include onDesktop {
+          font-size: 22px;
+        }
       }
     }
   }
@@ -75,25 +121,52 @@
   &-schedule {
     padding-bottom: 27px;
 
-    &-title, &-description {
+    @include onTablet {
+      grid-column: 4 / 7;
+      padding-left: 38px;
+    }
+
+    @include onDesktop {
+      grid-column: 8 / 13;
+      padding-left: 102px;
+    }
+
+    &-title, &-description, &-time {
       margin: 0;
-      padding-top: 24px;
-      font-family: IBM Plex Sans;
+      padding-top: 27px;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
       text-align: left;
-      color: #FFFFFF;
+      color: #FFF;
+
+      @include onTablet {
+        padding-top: 39px;
+      }
+    }
+
+    &-time-and-description {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+
+      @include onTablet {
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+      }
+
+      @include onDesktop {
+        gap: 45px;
+      }
     }
   }
 }
 
 .overlay {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background: rgba(128, 128, 128, 0.5); /* Напівпрозорий сірий фон */
   z-index: 1; /* Забезпечує відображення під блоком aside */
   opacity: 0;
