--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,16 @@
 @import 'fonts';
 @import 'typography';
 @import 'header';
-@import 'art-museum';
 @import 'actual-events';
 @import 'gallery';
 @import 'sign-up';
 @import 'footer';
 @import 'aside';
+
+html {
+  scroll-behavior: smooth;
+}
+
 
 body {
   margin: 0;
