--- a/src/styles/actual-events.scss
+++ b/src/styles/actual-events.scss
@@ -1,13 +1,38 @@
 .actual-events {
   margin-top: 70px;
 
+  @include onTablet {
+    margin-top: 88px;
+  }
+
+  @include onDesktop {
+    margin-top: 200px;
+  }
+
   &-title {
     margin: 0;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     text-align: center;
     color: #0F0E08;
+
+    @include onTablet {
+      text-align: left;
+    }
+  }
+
+  &-container-for-grid {
+    @include pageGrid;
+  }
+
+  &-first-link, &-second-link {
+    overflow: hidden;
+    grid-column: 1 / -1;
+
+    @include onDesktop {
+      grid-column: 1 / 8;
+    }
   }
 
   &-first-link, &-second-link, &-third-link {
@@ -17,47 +42,126 @@
 
     &-photo {
       width: 100%;
+
+      transition: transform 0.3s ease;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &-third-link {
+    height: 210px;
+
+    &-photo {
+      object-fit: cover;
+    }
+
+    @include onTablet {
+      height: 390px;
+    }
+
+    @include onDesktop {
+      height: 550px;
+    }
+  }
+
+  &-first-block {
+    grid-column: 1 / -1;
+
+    @include onTablet {
+      grid-column: 1 / 5;
+    }
+
+    @include onDesktop {
+      grid-column: 9 / 13;
+      grid-row: 1;
+    }
+  }
+
+  &-second-block {
+    grid-column: 1 / -1;
+
+    @include onTablet {
+      grid-column: 1 / 5;
+    }
+
+    @include onDesktop {
+      grid-column: 9 / 13;
+      grid-row: 2;
     }
   }
 
   &-container-for-dates {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     margin-top: 20px;
 
+    @include onTablet {
+      display: flex;
+      gap: 20px;
+      margin-top: 44px;
+    }
+
+    @include onDesktop {
+      margin-top: 215px;
+    }
+
+
     &-title {
       margin: 0;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
       text-align: left;
       color: #687480;
+
+      @include onTablet {
+        font-size: 14px;
+      }
     }
 
     &-date {
       margin: 0;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       text-align: left;
       color: #1A5A4C;
+
+      @include onTablet {
+        font-size: 14px;
+      }
     }
   }
 
   &-container-for-nameandsquare {
+    // grid-column: 1 / -1;
     display: flex;
+
+    // justify-content: space-between;
     align-items: center;
     gap: 10px;
     margin-top: 15px;
 
+    @include onTablet {
+      margin-top: 30px;
+    }
+
     &-name {
       margin: 0;
-      font-family: Montserrat;
+      padding: 0;
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       text-align: left;
       color: #0F0E08;
+      white-space: nowrap;
     }
 
     &-link {
+      margin: 0;
+      padding: 0;
       display: flex;
       width: 100%;
 
@@ -70,45 +174,77 @@
 
   &-description {
     margin-top: 10px;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 16px;
     text-align: left;
     color: #4E4E4E;
+
+    @include onTablet {
+      margin-top: 15px;
+    }
   }
 
   &-container-for-lection {
     display: flex;
     justify-content: space-between;
+
     // margin-top: 20px;
     padding-inline: 20px;
-    padding-block: 20px;
+
+    @include onTablet {
+      padding-inline: 55px;
+      justify-content: flex-start;
+      gap: 140px;
+    }
+
+    @include onDesktop {
+      padding-inline: 100px;
+    }
 
     &-title {
       margin: 0;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       font-weight: 500;
       text-align: left;
       color: #687480;
+
+      @include onTablet {
+        font-size: 14px;
+      }
     }
 
     &-date {
       margin: 0;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 16px;
       text-align: left;
       color: #1A5A4C;
+
+      @include onTablet {
+        font-size: 14px;
+      }
     }
 
     &-name {
       margin: 0;
-      padding-bottom: 20px;
-      border-bottom: solid 2px grey;
-      font-family: Montserrat;
+      padding-top: 20px;
+      font-family: Montserrat, sans-serif;
       font-size: 28px;
       font-weight: 400;
       text-align: center;
       color: #0F0E08;
+
+      @include onTablet {
+        padding-inline: 55px;
+        padding-top: 16px;
+        text-align: left;
+        font-size: 36px;
+      }
+
+      @include onDesktop {
+      padding-inline: 100px;
+      }
     }
   }
 
@@ -119,12 +255,22 @@
 
 .container-lection {
   margin-inline: 20px;
-  // padding-inline: 20px;
+  padding-block: 20px;
   position: absolute;
   transform: translateY(55%);
   bottom: 0;
   left: 0;
   right: 0;
-  box-shadow: 0px 2px 0px 0px #1A5A4C40;
+  box-shadow: 0 2px 0 0 #1A5A4C40;
   background-color: white;
+  border-bottom: solid 2px grey;
+
+  @include onTablet {
+    margin-inline: 99px;
+    padding-block: 45px;
+  }
+
+  @include onDesktop {
+    margin-inline: 355px;
+  }
 }
