--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,10 +1,28 @@
 .footer {
 
+  &-container-for-display-grid {
+    @include pageGrid;
+
+    position: relative;
+  }
+
   &-logos {
+    grid-column: 1 / -1;
+
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include onTablet {
+      grid-column: 1 / 2;
+
+      display: flex;
+      flex-direction: column;
+
+      align-items: flex-start;
+      gap: 62px;
+    }
   }
 
   &-logo {
@@ -22,8 +40,17 @@
     align-items: center;
     gap: 20px;
 
+    @include onTablet {
+      gap: 32px;
+    }
+
     &-facebook, &-instagram {
       display: flex;
+      transition: filter 0.3s ease;
+
+      &:hover {
+        filter: brightness(0) saturate(100%) invert(32%) sepia(97%) saturate(2261%) hue-rotate(184deg) brightness(98%) contrast(101%);
+      }
 
       &-logo {
         // width: 24px;
@@ -32,24 +59,70 @@
     }
   }
 
-  &-schedule-and-contacts {
-    padding-bottom: 70px;
+  &-border-bottom {
+    padding-top: 70px;
     border-bottom: solid 1px #1A5A4C80;
-    @include pageGrid;
+    grid-column: 1 / -1;
+
+    @include onTablet {
+      grid-column: 2 / 6;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &-schedule {
     grid-column: 1 / 2;
+    grid-row: 2;
+
+    @include onTablet {
+      grid-column: 2 / 4;
+      grid-row: 1;
+    }
+
+    @include onDesktop {
+      grid-column: 2 / 5;
+      grid-row: 1;
+    }
   }
 
   &-contacts {
     grid-column: 2 / 3;
+    grid-row: 2;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 47px;
+      height: 260px;
+      border-right: solid 1px #1A5A4C80;
+      display: none; // Спочатку приховуємо псевдоелемент
+
+      @include onDesktop {
+        display: block;
+      }
+    }
+
+    @include onTablet {
+      grid-column: 4 / 6;
+      grid-row: 1;
+    }
+
+    @include onDesktop {
+      grid-column: 5 / 7;
+      grid-row: 1;
+      padding-right: 65px;
+    }
   }
 
   &-schedule, &-contacts {
 
     &-title, &-description {
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 400;
       text-align: left;
@@ -59,20 +132,66 @@
     &-title {
       margin-top: 40px;
       margin-bottom: 20px;
+
+      @include onTablet {
+        margin-top: 50px;
+      }
     }
   }
 
   &-nav {
     margin-top: 40px;
     margin-bottom: 80px;
-    @include pageGrid;
+
+    // @include pageGrid;
+    // grid-column: 1 / -1;
+    // grid-row: 2;
+
+    // display: flex;
+    // flex-direction: row;
+    // gap: 20px;
+
+    @include onTablet {
+      margin-top: 64px;
+      margin-bottom: 120px;
+
+      // grid-column: 2 / 6;
+    }
+
+    @include onDesktop {
+      margin-top: 47px;
+      padding-left: 65px;
+    }
+
+    // @include onDesktop {
+    //   grid-column: 8 / 12;
+    //   grid-row: 1;
+    // }
 
     &-left {
       grid-column: 1 / 2;
+
+      @include onTablet {
+        grid-column: 2 / 4;
+      }
+
+      @include onDesktop {
+        grid-column: 8 / 10;
+        grid-row: 1;
+      }
     }
 
     &-right {
       grid-column: 2 / 3;
+
+      @include onTablet {
+        grid-column: 4 / 6;
+      }
+
+      @include onDesktop {
+        grid-column: 10 / 12;
+        grid-row: 1;
+      }
     }
 
     &-list {
@@ -85,7 +204,7 @@
     }
 
     &-link {
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 14px;
       font-weight: 400;
       text-align: left;
@@ -101,14 +220,47 @@
     gap: 10px;
     justify-content: center;
 
+    @include onTablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 35px;
+    }
+
+    @include onDesktop {
+      margin-top: 87px;
+    }
+
     &-design, &-copyright {
       margin: 0;
       padding: 0;
-      font-family: IBM Plex Sans;
+      font-family: "IBM Plex Sans", sans-serif;
       font-size: 12px;
       font-weight: 300;
       text-align: center;
       color: #0F0E08;
+    }
+  }
+
+  &-circle-with-arrow {
+    position: absolute;
+    width: 50px; /* Ширина кола */
+    height: 50px; /* Висота кола */
+    border-radius: 50%; /* Робить елемент круглим */
+    border: 1px solid #1A5A4C; /* Обрамлення кола */
+    display: flex;
+    align-items: center; /* Вирівнює стрілку по вертикалі */
+    justify-content: center; /* Вирівнює стрілку по горизонталі */
+    right: 0; /* Відстань справа */
+    bottom: 201px;
+
+    @include onTablet {
+      display: none;
+    }
+
+    &-image {
+      width: 10px; /* Ширина стрілки */
+      height: 12px;
     }
   }
 }
