--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,5 +1,6 @@
 .header {
   margin: 0;
+
   @include pageGrid;
 
   &-link {
@@ -10,6 +11,10 @@
 
     @include onTablet {
       grid-column: 4 / 7;
+    }
+
+    @include onDesktop {
+      grid-column: 6 / 13;
     }
 
     &-photo {
@@ -34,6 +39,11 @@
       padding-inline: 34px;
       padding-top: 15px;
     }
+
+    @include onDesktop {
+      gap: 536px;
+      padding-inline: 55px;
+    }
   }
 
   &-burger-menu {
@@ -57,14 +67,22 @@
 
 .art-museum {
   grid-column: 1 / -1;
-  padding-inline: 20px;
+  padding-inline-start: 20px;
+  padding-top: 20px;
 
+  position: relative;
 
   @include onTablet {
     grid-column: 1 / 4;
     grid-row: 1;
     padding-top: 127px;
-    padding-inline: 34px;
+    padding-inline-start: 34px;
+  }
+
+  @include onDesktop {
+    grid-column: 1 / 6;
+    padding-top: 207px;
+    padding-inline-start: 55px;
   }
 
   &-title-and-link {
@@ -78,19 +96,28 @@
       align-items: start;
       gap: 38px;
     }
+
+    @include onDesktop {
+      gap: 89px;
+    }
   }
 
   &-title {
     margin: 0;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 45px;
     font-weight: 700;
 
     text-align: center;
-    color: #000000;
+    color: #000;
 
     @include onTablet {
       text-align: left;
+      font-size: 54px;
+    }
+
+    @include onDesktop {
+      font-size: 72px;
     }
   }
 
@@ -101,11 +128,45 @@
     width: 100%;
 
     @include onTablet {
-      // justify-content: left;
+      justify-content: left;
+    }
+
+    @include onDesktop {
+      justify-content: right;
     }
 
     &-img {
       width: 280px;
+    }
+  }
+
+  &-events {
+    display: none;
+
+    @include onDesktop {
+      display: flex;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      flex-direction: column;
+      align-items: center;
+      gap: 7px;
+      padding-inline-start: 55px;
+    }
+
+    &-text {
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      color: #687480;
+      writing-mode: vertical-rl; /* Вертикальний текст, який розташований знизу вгору */
+      transform: rotate(180deg);
+    }
+
+    &-line {
+      width: 1px;
+      height: 70px;
+      background-color: #1A5A4C;
+      writing-mode: vertical-lr;
     }
   }
 }
