--- a/src/styles/sign-up.scss
+++ b/src/styles/sign-up.scss
@@ -2,8 +2,15 @@
   margin-top: 100px;
   position: relative;
 
-  &-link {
+  @include onTablet {
+    margin-top: 92px;
+  }
 
+  @include onDesktop {
+    margin-top: 200px;
+  }
+
+  &-link {
     width: 100%;
 
     &-photo {
@@ -17,19 +24,28 @@
 
   &-title {
     margin: 0;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-weight: 700;
     text-align: center;
-    color: #FFFFFF;
+    color: #FFF;
+
+    @include onTablet {
+      font-size: 48px;
+    }
   }
 
   &-description {
     margin-top: 20px;
-    font-family: IBM Plex Sans;
+    font-family: "IBM Plex Sans", sans-serif;
     font-size: 18px;
     text-align: center;
-    color: #FFFFFF;
+    color: #FFF;
+
+    @include onTablet {
+      white-space: nowrap;
+      margin-top: 16px;
+    }
   }
 
   &-contact-form {
@@ -38,9 +54,9 @@
     &-email {
       width: 230px;
       height: 50px;
-      background-color: #FFFFFF;
+      background-color: #FFF;
       padding: 18px 24px;
-      font-family: Montserrat;
+      font-family: Montserrat, sans-serif;
       font-size: 14px;
       text-align: left;
       color: #687480;
@@ -66,10 +82,16 @@
 .container-for-form-and-square {
   margin-top: 50px;
   display: flex;
+
   // flex-direction: row;
   gap: 0;
   align-items: center;
   justify-content: center;
+
+  @include onTablet {
+    gap: 16px;
+    margin-top: 64px;
+  }
 
 }
 
