changes was added

--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -7,6 +7,14 @@
   padding: 0;
   margin: 0;
 
+  &--for-footer {
+    gap: 20px 47px;
+
+    @include on-desktop {
+      gap: 20px 87px;
+    }
+  }
+
   &__item {
     position: relative;
     width: max-content;
@@ -70,6 +78,9 @@
 
     &--for-footer {
       color: $section-title-color;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 14px;
     }
   }
 }
