--- a/src/styles/blocks/_scroll-top.scss
+++ b/src/styles/blocks/_scroll-top.scss
@@ -1,14 +1,6 @@
 .scroll-top {
   display: none;
   position: fixed;
-  width: 50px;
-  height: 50px;
-  background-color: $white-color;
-  border: 1px solid $dark-grey-color;
-  border-radius: 50%;
-  box-shadow:
-    0 1px 0 0 rgba(0, 0, 0, 0.2),
-    0 2px 20px 0 rgba(0, 0, 0, 0.19);
   right: 55px;
   bottom: 120px;
 
@@ -22,12 +14,15 @@
 
   &__icon {
     display: inline-block;
-    padding: 10px 16px 14px;
-
-    font-size: 20px;
-    color: $dark-grey-color;
-    text-decoration: none;
-    text-align: center;
+    width: 50px;
+    aspect-ratio: 1;
+    background: $white-color url(./../images/icons/scroll-arrow-up.svg) center
+      no-repeat;
+    border: 1px solid $dark-grey-color;
+    border-radius: 50%;
+    box-shadow:
+      0 1px 0 0 rgba(0, 0, 0, 0.2),
+      0 2px 20px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
   }
 }
