--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,14 @@
-$c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$primary-text-color: #0f0e08;
+$background-color: #fff;
+$light-text-color: #fff;
+$events-type-text-color: #687480;
+$second-text-color: #4e4e4e;
+$subscribe-button-bg: #f14a27;
+$transition-duration: 0.3s;
+$design-main-color: #1a5a4c;
+$second-font-family: Montserrat, sans-serif;
+$footer-line-color: #1a5a4c80;
+$main-font-family: 'IBM Plex Sans', sans-serif;
+$menu-line-color: #ffffff80;
