--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -10,9 +10,10 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    margin-right: calc(-50vw + 50%);
+    width: 100vw;
 
     height: 300px;
-    width: 100%;
     padding-top: 9px;
 
     background-image: url('../images/header-bg.png');
