--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,7 @@
   max-width: 1440px;
   margin: auto;
   position: relative;
+  overflow-x: hidden;
 
   scroll-behavior: smooth;
   transition: all $transition-duration;
