--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -10,6 +10,10 @@
   background-position: center;
   color: $light-text-color;
 
+  margin-left: calc(-50vw + 50%);
+  margin-right: calc(-50vw + 50%);
+  width: 100vw;
+
   &__title {
     margin-bottom: 20px;
 
