--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,23 +8,23 @@
   transition: all 0.3s;
   transform: translateX(-100%);
   pointer-events: none;
+  background-color: #1a5a4c;
 
   &:target {
     opacity: 1;
     pointer-events: all;
     transform: translateX(0);
   }
-  background-color: #1a5a4c;
 
   &-nav {
     gap: 28px;
     padding-top: 27px;
     display: flex;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid $main-text-color;
     padding-bottom: 24px;
     &__item {
       text-decoration: none;
-      color: #ffffff;
+      color: $main-text-color;
     }
 
     &__gallery {
