--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,5 +1,5 @@
 @import './utils/mixins';
 @import './base/common';
-@import './base/reset.scss';
+@import './base/reset';
 @import './utils/variebles';
 @import './base/container';
